modifications done regarding nxn