@@ -1,14 +1,18 @@
 package org.example;
-
 import java.util.List;
 import java.util.ArrayList;
 import java.util.InputMismatchException;
 import java.util.Scanner;
+import static java.lang.Math.pow;
 import static java.lang.System.exit;
 
 public class Game {
   public static final char X_SYMBOL = 'X';
-  public static final char O_SYMBOL = 'Y';
+  public static final int X_SYMBOL_VALUE = -1;
+  public static final int O_SYMBOL_VALUE = -2;
+  public static final char O_SYMBOL = 'O';
+  public static final String human = "\uD83E\uDEC5 ";
+  public static final String robot = "\uD83E\uDD16 ";
   private Board boardobj;
   private Player player;
   private Player cyborg;
@@ -24,20 +28,14 @@ public class Game {
   private void whoWin(char ch) {
     StringBuilder result = new StringBuilder();
     if (ch == player.getSymbol()) {
-      for (int i = 0; i < 25; i++) {
-        result.append("\uD83E\uDEC5 ");
-      }
-      println("");
-      result.append(
-          String.format(
-              "Hurray \uD83E\uDD73, %s you nailed it \uD83E\uDD29 !: ", player.getName()));
+      result.append(human.repeat(25));
+      result.append("\n");
+      result.append("Hurray \uD83E\uDD73, %s you nailed it \uD83E\uDD29 !: ".formatted(player.getName()));
       println(result.toString());
 
     } else {
-      for (int i = 0; i < 25; i++) {
-        result.append("\uD83E\uDD16 ");
-      }
-      println("");
+      result.append(robot.repeat(25));
+      result.append("\n");
       result.append("Cyborg win ! Bring on your defense game \uD83D\uDCAA next time !");
       println(result.toString());
     }
@@ -60,18 +58,30 @@ public class Game {
   }
 
   private void setPlayerSymbol() {
+    String ip;
     do {
-      String result =
-          String.format("%s choose your playerSymbol from { X, O }: ", player.getName());
+      String result = "%s choose your playerSymbol from { X, O }: ".formatted(player.getName());
       System.out.println(result);
-      player.symbol = this.sc.nextLine().toUpperCase().charAt(0);
-      if (player.symbol == 'Q') {
+      ip = this.sc.next();
+      char ipchar = ip.toUpperCase().charAt(0);
+      if(ip.length() != 1)
+      {
+        System.out.println("Sry, Only one character is allowed \uD83E\uDD25 !");
+        ip="";
+      }
+     else if (ipchar == 'Q') {
         println("Are u leaving me in th middle ?? ohk then \uD83D\uDC4B \uD83D\uDC4B");
         exit(0);
       }
-
-    } while (!(player.symbol == X_SYMBOL || player.symbol == O_SYMBOL)
-        && println("Sry, Cannot enter anything except X_SYMBOL or O_SYMBOL \uD83E\uDD25 !"));
+     else if(ipchar != X_SYMBOL && ipchar!= O_SYMBOL){
+        println("Sry, Cannot enter anything except 'X' or 'O' \uD83E\uDD25 !");
+        ip="";
+      }
+     else {
+       player.setSymbol(ipchar);
+      }
+      sc.nextLine();
+    } while (ip.isEmpty());
   }
 
   protected void initialStartup() {
@@ -84,13 +94,13 @@ public class Game {
   private void postStartup() {
     setPlayerSymbol();
     cyborg.setSymbol((player.getSymbol() == X_SYMBOL) ? O_SYMBOL : X_SYMBOL);
+    askBoardSize();
     boardobj.initializeBoard();
     boardobj.showBoard();
     startPlay();
   }
 
   private void startPlay() {
-
     if (player.getSymbol() == X_SYMBOL) {
       while (true) {
         playerPlay();
@@ -110,22 +120,19 @@ public class Game {
 
     do {
       try {
-
-        String result =
-            String.format(
-                "%s enter empty location for the next move from 1 to 9 : ", player.getName());
+        String result = "%s enter empty location for the next move from 1 to %d : ".formatted(player.getName(),maxLimit());
         System.out.println(result);
         position = this.sc.nextInt();
-        if (!(position >= 1 && position <= 9)) {
+        if (!(position >= 1 && position <= maxLimit())) {
           position = -1;
-          throw new OutOfRange(" \uD83D\uDE4F Plzz enter position between 0 to 9 only !");
+          throw new OutOfRange(" \uD83D\uDE4F Plzz enter position between 1 to %d only !".formatted(maxLimit()));
         } else if (!boardobj.getEmptyPositions().contains(position)) {
           position = -1;
           throw new OutOfPosition(" \uD83D\uDE4F Plzz enter an empty position !");
         }
 
       } catch (InputMismatchException e) {
-        println(" \uD83D\uDE4F Plzz Enter only numbers  from 1 to 9 !! ");
+        println(" \uD83D\uDE4F Plzz Enter only numbers  from 1 to %d !!".formatted(maxLimit()));
 
       } catch (OutOfRange | OutOfPosition e) {
         println(e.getMessage());
@@ -139,50 +146,60 @@ public class Game {
   }
 
   private int getComputerMove() {
-    return boardobj.getEmptyPositions().get(0);
+    return boardobj.getEmptyPositions().getFirst();
+  }
+  private int maxLimit()
+  {
+    return (int)pow(boardobj.getBoardSize(),2);
   }
 
+  private int getCheckWinnerEmptyPositionSize()
+  {
+     return maxLimit()-( (boardobj.getBoardSize() * 2) -1 );
+  }
   private void computerPlay() {
     int position = getComputerMove();
     removePositionFromPositionList();
-    updateBoard(position, cyborg.getSymbol());
+    updateBoard(position, player.getSymbol()==X_SYMBOL?O_SYMBOL_VALUE:X_SYMBOL_VALUE);
     printUserMove("Cyborg");
-    if (boardobj.getEmptyPositions().size() <= 4) {
-      isWinningMoveOrTie(player.getSymbol());
-    }
+    checkWinner(cyborg.getSymbol());
   }
 
+  private void checkWinner(char symbol)
+  {
+    if (boardobj.getEmptyPositions().size()
+            <= getCheckWinnerEmptyPositionSize()) {
+      isWinningMoveOrTie(symbol);
+    }
+  }
   private List<Integer> convertPositionIntoRowCol(int position) {
-    int row = (position - 1) / 3;
-    int col = position - (row * 3) - 1;
+    int row = (position - 1) / boardobj.getBoardSize();
+    int col = position - (row * boardobj.getBoardSize()) - 1;
     List<Integer> rowColList = new ArrayList<>();
     rowColList.add(row);
     rowColList.add(col);
     return rowColList;
   }
 
-  private void updateBoard(int position, char symbol) {
+  private void updateBoard(int position, int symbol) {
     List<Integer> rowCols = convertPositionIntoRowCol(position);
     int row = rowCols.get(0);
     int col = rowCols.get(1);
-    boardobj.getBoard()[row][col] = symbol;
+    boardobj.getBoard().get(row).set(col,symbol);
   }
 
   private void playerPlay() {
     int position = getPositionFromUser();
     // the last conition of while loop suggests that if the intList does not contains the position
     // choosen by the human then it will again ask him/her
-    updateBoard(position, player.getSymbol());
+    updateBoard(position, player.getSymbol()==X_SYMBOL?X_SYMBOL_VALUE:O_SYMBOL_VALUE);
     removePositionFromPositionList(position);
     printUserMove(player.getName());
-    if (boardobj.getEmptyPositions().size() <= 4) {
-      isWinningMoveOrTie(player.getSymbol());
-    }
+    checkWinner(player.getSymbol());
   }
 
   private void printUserMove(String name) {
-    String result =
-        String.format("~~~~~~~~~~~~~~~~~~~~~~~~~~~  %s's Move  ~~~~~~~~~~~~~~~~~~~~~~~~~~", name);
+    String result = "~~~~~~~~~~~~~~~~~~~~~~~~~~~  %s's Move  ~~~~~~~~~~~~~~~~~~~~~~~~~~".formatted(name);
     println(result);
     boardobj.showBoard();
   }
@@ -192,8 +209,7 @@ public class Game {
   }
 
   private void removePositionFromPositionList() {
-
-    boardobj.getEmptyPositions().remove(0);
+    boardobj.getEmptyPositions().removeFirst();
   }
 
   private void manual() {
@@ -222,41 +238,97 @@ public class Game {
     }
   }
 
-  private void checkRowCol(char[][] board, char symbol) {
-    for (int i = 0; i < 3; i++) { // checking row and column trio
-      if ((board[i][0] == symbol && board[i][1] == symbol && board[i][2] == symbol)
-          || (board[0][i] == symbol && board[1][i] == symbol && board[2][i] == symbol)) {
-        whoWin(symbol);
-        menu();
+  private void checkRowColDia(List<List<Integer>> board, char symbol) {
+    boolean rowTrio = true;
+    boolean colTrio = true;
+    boolean dia1Trio = true;
+    boolean dia2Trio = true;
+    int dia1Element = board.getFirst().getFirst();
+    int dia2Element = board.getFirst().getLast();
+    for (int i = 0; i < board.size(); i++) // checking row and column trio
+   {
+     int firstRowElement = board.get(i).getFirst();
+     int firstColElement = board.getFirst().get(i);
+        for(int j = 0;j<board.size();j++)
+        {
+            int currentElement = board.get(i).get(j);
+
+            rowTrio =  rowTrio && (firstRowElement == currentElement);
+            colTrio = colTrio && (firstColElement == board.get(j).get(i));
+            if(dia1Trio && i == j)
+            {
+              dia1Trio = (dia1Element == currentElement);
+            }
+            if(dia2Trio && i+j+1 == board.size())
+            {
+              dia2Trio = (dia2Element == currentElement);
+            }
+
+        }
+        if(rowTrio|| colTrio)
+        {
+          whoWin(symbol);
+          menu();
+          return;
+        }
+        rowTrio = true;
+        colTrio = true;
+      }
+      if(dia1Trio || dia2Trio)
+      {
+          whoWin(symbol);
+          menu();
       }
     }
-  }
 
-  private void checkDiagonal(char[][] board, char symbol) {
-    if ((board[0][0] == symbol && board[1][1] == symbol && board[2][2] == symbol)
-        || (board[0][2] == symbol && board[1][1] == symbol && board[2][0] == symbol)) {
-      whoWin(symbol);
-      menu(); // checking diagonal trio
-    }
-  }
 
   private void checkTie() {
-    if (boardobj.getEmptyPositions().isEmpty()) { // checking tie
-      for (int i = 0; i < 20; i++) {
-        System.out.println("\uD83D\uDE48 ");
-      }
-      println("");
-      String result = "It's a TIE \uD83D\uDC94";
+    if (boardobj.getEmptyPositions().isEmpty()) {
+      String tie = "\uD83D\uDE48 ";
+        // checking tie
+        String result = tie.repeat(25) +
+                "\n" +
+                "It's a TIE \uD83D\uDC94";
       println(result);
       menu();
     }
   }
 
+  private void askBoardSize()
+  {
+    int size = -1;
+  do
+    {
+      try{
+      println("\uD83E\uDF95 What size of Tic-Tac-Toe would you liket to play ? We have boards from 3X3 to 15X15, For 7X7 enter 7 and so on ... ");
+      size = this.sc.nextInt();
+      if(size%2 == 0)
+      {
+        size = -1;
+         throw new EvenNumber(" \uD83D\uDE4F Plz enter odd numbers !");
+      }
+      else if(size<3 || size >15)
+      {
+        size = -1;
+        throw new OutOfRange(" \uD83D\uDE4F Plz enter numbers between 3 and 15 !");
+      }
+      }
+      catch (EvenNumber | OutOfRange exception)
+      {
+        println(exception.getMessage());
+      }
+      finally{
+        sc.nextLine();
+      }
+
+    }while(size == -1);
+   boardobj.setBoardSize(size);
+  }
+
   private void isWinningMoveOrTie(char symbol) {
 
-    char[][] board = boardobj.getBoard();
-    checkRowCol(board, symbol);
-    checkDiagonal(board, symbol);
+    List<List<Integer>> board = boardobj.getBoard();
+    checkRowColDia(board, symbol);
     checkTie();
   }
 }
